# slack-tool

./: .env.example  .gitignore  .slack-intel.example.yaml  .slack-intel.yaml.example  README.md  SKILL.md  pyproject.toml
docs/: CACHING_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TREES.md  JIRA_ENRICHMENT.md  PARQUET_CACHE_USAGE.md  PARQUET_SCHEMA.md  README.md  S3_SYNC.md  SPIKE_SUMMARY.md  SPIKE_USER_TOKEN.md  USER_TOKEN_AUTH.md  USER_TOKEN_COMMIT_SUMMARY.md  VIEW_SYSTEM_SUMMARY.md  attention-flow-implementation.md  cache-integrity-summary.md  config-init-quickstart.md  custom-instructions.md  data-integrity-requirements.md  global-installation-guide.md  llm-processing.md  message-view-bdd-scenarios.md  message-view-system.md  notes.md  user-mention-resolution-solution-trees.md
hooks/: README.md  install.sh  pre-commit
scripts/: demo_view_output.py
skills/slack-intel-workflow/: SKILL.md
slack-intel-go/: .gitignore  Makefile  README.md  benchmark.sh  go.mod  go.sum
src/slack_intel/: __init__.py  cli.py  config.py  credentials.py  enriched_message_view_formatter.py  parquet_cache.py  (+10 more)
tests/: __init__.py  fixtures.py  test_cache_thread_replies.py  test_cache_threads_jira.py  test_custom_instructions.py  test_idempotent_cache.py  test_integration.py  test_message_view_formatter.py  test_models.py  test_parquet_cache.py  test_parquet_message_reader.py  test_parquet_models.py  test_parquet_thread_schema.py  test_parquet_user_reader.py  test_parquet_validation.py  test_slack_api_conversion.py  test_thread_reconstructor.py  test_view_integration.py
(+9 files in other folders)
