[project]
name = "slack-intel"
version = "0.1.0"
description = "LLM-optimized Slack message processing and intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27.0",
    "jira>=3.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.13.1",
    "pyarrow>=14.0.0",
    "duckdb>=0.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",
    "s3fs>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
slack-intel = "slack_intel.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require API access, slower)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
